Fix/simplify views display summary (#1236)
* Fix: improve views display in summary tab

- Refactor ontology_views to use properties_dropdown

- Apply TextAreaFieldComponent for see more/see less functionality

- Fix visibility bug in text_truncate_controller for closed elements

* refactor: remove redundant comment in text truncate controller connect method

* Refactor see more component to support configurable line display

* Format view name to include acronym and capitalize first letter

* Move default line clamp value from CSS to component

* Revert views section layout to restore 'Create new view' button

* style: refine views section presentation with dropdown and formatted titles

* fix(XSS): secure view links and refine UI styling

---------

--- a/app/assets/stylesheets/components/text_area_field.scss
+++ b/app/assets/stylesheets/components/text_area_field.scss
@@ -2,7 +2,7 @@
     overflow: hidden;
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: var(--read-more-line-clamp, 5);
+    -webkit-line-clamp: var(--read-more-line-clamp);
 }
 
 
